# libuv-proxy

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.md  test.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
include/: ParseHttp.h
lib/: ParseHttp.c  picohttpparser.c
res/: help.txt  help_euc-kr.txt
src/: Global.c  Global.h  Main.c  PorxyClient.c  PorxyClient.h  SendDNS.c  SendDNS.h  ServerLog.c  ServerLog.h  Utills.c  Utills.h
src/parser/: CMakeLists.txt  ParseHttp.c  ParseHttp.h  ParseSNI.c  ParseSNI.h
src/sha256/: sha256.c  sha256.h
